fixing some layout issues

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -450,75 +450,106 @@ li{
 }
 /* block_02) */
 .block_02{
-  width: 100%;
-  overflow: hidden;
-  padding: .75rem 1.5rem;
-  max-width: 80em;
+  position: relative;
+  width: 1905px;
+  max-width: 100%;
   margin: 0 auto;
+  padding-left: 66px;
+  padding-right: 66px;
+  clear: both;
+  background-color: #F4F7F6;
+}
+.block_heading{
+  display: block;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 600;
+  letter-spacing: 1px;
+  text-align: center;
+  width: 100%;
+  height: auto;
+}
+.block_heading > h1 {
+  padding: 50px 0;
+  overflow: hidden;
+  font-family: 'Roboto', sans-serif;
+  text-transform: uppercase; 
+}
+.services-container-home{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  text-align: center;
-  margin-top: 40px;
+  width: 100%;
+  height: auto;
   justify-content: space-evenly;
-  margin-bottom: 40px;
+  overflow: hidden;
 }
-.feature{
-  width: 24%;
-  padding: 0 .75rem;
-}
-.block_02_link{
-  color: black;
-}
-.fas.fa-map-marked-alt.fa-5x{
-  margin-bottom: .75rem;
-  color: rgb(11, 107, 191);
-}
-.fas.fa-money-check-alt.fa-5x{
- margin-bottom: .75rem;   
- color: rgb(11, 107, 191);
-}
-.fab.fa-black-tie.fa-5x{
-  margin-bottom: .75rem;   
-  color: rgb(11, 107, 191);
-}
-.fas.fa-cut.fa-5x{
-  margin-bottom: .75rem;   
-  color: rgb(11, 107, 191);
-}
-.feature_title{
-  font-size: 1.5rem;
-  text-transform: capitalize;
-  font-weight: 500;
-  letter-spacing: 0;
-  font-family: 'Roboto', sans-serif;
-  margin-bottom: .75rem;
-  color: rgb(11, 107, 191);
-}
-.feature > p{
-  margin-bottom: .75rem;
-  font-family: 'Roboto', sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.4;
-}
-.feature_link{
+.s-container{
   display: block;
-  font-size: .9rem;
-  font-weight: 600;
-  letter-spacing: 1px;
-  text-decoration: none;
-  text-transform: uppercase;
+  position: relative;
+  width: 23.5%;
+  overflow: hidden;
+  background-color: white;
+}
+.s-image-container{
+  display: block;
+  overflow: hidden;
+  width: 417px;
+  height: 298px;
+}
+.s-image-container > img{
+  position: relative;
+  object-fit: cover;
+  background-size: cover;
+  height: 100%;
+  background-repeat: no-repeat;
+}
+.s-image-container > img:nth-child(1){
+  left: -25%;
+}
+.s-description-container{
+  display: block;
+  width: 100%;
+  position: relative;
+  padding: 20px;
+}
+.s-header-container{
+  display: block;
   font-family: 'Roboto', sans-serif;
-  color: rgb(11, 107, 191);
-  cursor: pointer;
-  margin-bottom: .75rem;
 }
-.feature_link:hover{
-  color: red;
+.s-header-container> h2{
+  margin-bottom: 12px;
+  text-transform: uppercase;
+  font-weight: 400;
 }
-.feature_link:after{
-content: " \203A";
+.s-description{
+  display: block;
+  font-family: 'Roboto', sans-serif;
+}
+.s-description > p{
+  font-size: 14px;
+  line-height: 20px;
+}
+.more-services{
+  display: block;
+  width: auto;
+  text-align: center;
+  padding: 50px;
+}
+.view-more{
+    font-family: 'Roboto', sans-serif;
+    width: auto;
+    display: inline-block;
+    position: relative;
+    font-size: .9rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: rgb(11, 107, 191);
+    cursor: pointer;
+}
+.view-more::after{
+  content: " \203A";
 }
 /* block_03 */
 .block_03{
@@ -530,23 +561,27 @@ content: " \203A";
 .block_04{
   display: block;
   background-color: white;
+  padding-bottom: 40px;
+  padding-top: 40px;
 }
 .home-form{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   max-width: 75em;
-  width: 100%;
+  width: 98%;
+  padding: 1.5rem;
   margin: 0 auto;
 }
 .form-container{
   display: block;
-  width: 48.5%;
   padding: 1.5rem;
+  width: 48.5%;
+  background-color: transparent;
 }
 .form-heading{
   font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  font-weight: 600;
   margin-bottom: .25rem;
   text-transform: uppercase;
   font-size: 1.2rem;
@@ -583,21 +618,22 @@ content: " \203A";
 }
 .submit-button{
   display: block;
-  width: 100%;
+  width: 25%;
   padding: .8em;
   cursor: pointer;
-  background-color: #13294B;
-  color: white;
+  background-color: transparent;
+  color: black;
+  border: 1px solid black;
   font-size: 15px;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 1px;
-  border: none;
   border-radius: 5px;
   transition: all 0.3s ease;
 }
 .submit-button:hover{
-  background-color:#5C9DC2;
+  color: #5C9DC2;
+  border-color: #5C9DC2;
   transition: all 0.3s ease;
 }
 .input-label{
@@ -616,12 +652,60 @@ content: " \203A";
 .right-content{
   display: block;
   width: 48.5%;
+  padding: 1.5rem;
+  font-family: 'Roboto', sans-serif;
 }
-.right-content{
+.fa-dollar-sign{
+  overflow: visible;
+  position: absolute;
+  color: black;
+  background-repeat: repeat-x;
+}
+.coupon{
   display: block;
-  width: 48.5%;
-  border: 1px solid black;
+  position: relative;
+  background-color:transparent;
+  height: 100%;
+  width: 100%;
+  border-radius: 8px;
+  min-height: 250px;
+  background-color: white;
 }
+.coupon-h2{
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: .25rem;
+  font-size: 1.2rem;
+  line-height: 1.2;
+}
+.coupon-container{
+ display: block;
+ margin-bottom: .25rem;
+ position: absolute;
+ top: 50%;
+ transform: translateY(-50%);
+}
+.coupon-link-container{
+  position: absolute;
+  display: block;
+  bottom: 0;
+  cursor: pointer;
+}
+.coupon-link-container > a{
+  display: block;
+  font-size: .9rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color:rgb(11, 107, 191);
+  cursor: pointer;
+  padding:.8rem 0;
+}
+.coupon-link-container > a::after{
+  content: " \203A";
+}
+
 .error-message{
   display: block;
 }
@@ -719,7 +803,25 @@ content: " \203A";
   color: rgba(0, 0, 0, 0.811);
 }
 /* MEDIA QUERIES */
+@media(max-width: 1294px){
+  .block_02{
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
 @media(max-width: 1024px){
+  .s-container{
+    width: 47.5%;
+  }
+  .s-container:nth-child(1){
+    margin-bottom: 20px;
+  }
+  .s-container:nth-child(2){
+    margin-bottom: 20px;
+  }
+  .s-image-container{
+    width: auto;;
+  }
   .inner{
     padding: 0px 35px;
   }
@@ -734,6 +836,33 @@ content: " \203A";
   }
 }
 @media (max-width: 700px) {
+  .form201{
+    width: 100%;
+  }
+  .right-content{
+    width: 100%;
+  }
+  .home-form{
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .form-container{
+    width: 100%;
+  }
+  .s-container{
+    width: 100%;
+  }
+  .s-image-container > img:nth-child(1){
+    left: 0;
+  }
+  .s-container:nth-child(3){
+    margin-bottom: 20px;
+  }
+  .s-container:nth-child(4){
+    margin-bottom: 20px;
+  }
   .box-left {
     overflow: hidden;
   }
@@ -794,5 +923,10 @@ content: " \203A";
   .feature{
     width: 98.5%;
     margin-bottom: 60px;
+  }
+}
+@media(max-width: 600px){
+  .s-image-container > img:nth-child(1) {
+    left: -25%;
   }
 }
